--- a/.github/workflows/scrape_and_update.yml
+++ b/.github/workflows/scrape_and_update.yml
@@ -21,7 +21,7 @@ jobs:
       run: pip install -r requirements.txt  # Install dependencies
 
     - name: Run the script
-      run: python your_script.py  # Run your script
+      run: python Flatmates_Scraper.py  # Run your script
 
     - name: Any additional steps
       run: <additional_commands>
