--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ google-auth-oauthlib==1.1.0
 gspread==5.12.0
 httplib2==0.22.0
 idna==3.4
-numpy==1.26.2
+numpy==1.22.*
 oauth2client==4.1.3
 oauthlib==3.2.2
 pandas==2.1.3
