--- a/.github/workflows/scrape_update.yml
+++ b/.github/workflows/scrape_update.yml
@@ -23,6 +23,10 @@ jobs:
 
     - name: Run the script
       run: python Flatmates_Scraper.py  # Run your script
+      env:
+        GSPREAD_CREDENTIALS: ${{ secrets.GSPREAD_CREDENTIALS }}
+        GOOGLE_SHEET_ID: ${{ secrets.GOOGLE_SHEET_ID }}  # Assuming you also have this secret set
+      
 
     - name: Any additional steps
       run: <additional_commands>
